force-app/main/default/objects/FscBot_TravelRequest__c/FscBot_TravelRequest__c.object-meta.xml
<CustomObject>
    <label>Travel Plan</label>
    <nameField>
        <label>TravelRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>