force-app/main/default/objects/FscBot_TravelRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TravelRequests</relationshipLabel>
    <relationshipName>TravelRequests</relationshipName>
    <type>Lookup</type>
</CustomField>