force-app/main/default/objects/FscBot_TravelRequest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TravelRequests</relationshipLabel>
    <relationshipName>TravelRequests</relationshipName>
    <type>Lookup</type>
</CustomField>