force-app/main/default/objects/FscBot_TravelRequest__c/fields/FinancialAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountNumber__c</fullName>
    <label>FinancialAccountNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>