force-app/main/default/objects/FscBot_TravelRequest__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <label>FromDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>