force-app/main/default/objects/FscBot_TravelRequest__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>The travel request will be inactive if the ToDate is past the current date</description>
    <formula>FromDate__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= ToDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>