force-app/main/default/objects/FscBot_TravelRequest__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <label>ToDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>