force-app/main/default/objects/FscBot_TravelRequest__c/fields/Travelling_Country__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Country__c</fullName>
    <label>Travelling Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>